WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95936
[WK2] New fast/forms/number/number-interactive-validation-required.html fails
https://bugs.webkit.org/show_bug.cgi?id=95936
Summary
[WK2] New fast/forms/number/number-interactive-validation-required.html fails
Csaba Osztrogonác
Reported
2012-09-05 22:53:25 PDT
New fast/forms/number/number-interactive-validation-required.html introduced in
https://trac.webkit.org/changeset/127564
fails on Qt WK2: --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/fast/forms/number/number-interactive-validation-required-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/fast/forms/number/number-interactive-validation-required-actual.txt @@ -3,7 +3,7 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS queryValues["test"] is "123456789" +FAIL queryValues["test"] should be 123456789. Was . PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch
(8.48 KB, patch)
2012-09-09 23:24 PDT
,
Chris Dumez
kenneth
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(8.50 KB, patch)
2012-09-10 00:39 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2012-09-05 23:06:50 PDT
I skipped it to paint the bot green -
https://trac.webkit.org/changeset/127697
Please unskip it with the proper fix.
yosin
Comment 2
2012-09-06 01:04:22 PDT
The test number-interactive-validation-required.html assumes interactive validation is enabled by port. If Qt port doesn't enable that, skipping this test is safe.
Chris Dumez
Comment 3
2012-09-09 23:20:25 PDT
We need to enabled interactive form validation setting in WebKitTestRunner (as we are doing in DumpRenderTree already). I'll upload a patch soon.
Chris Dumez
Comment 4
2012-09-09 23:24:33 PDT
Created
attachment 163045
[details]
Patch
WebKit Review Bot
Comment 5
2012-09-10 00:23:25 PDT
Comment on
attachment 163045
[details]
Patch Rejecting
attachment 163045
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: .. Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Failed to merge in the changes. Patch failed at 0001 Unreviewed GTK gardening. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output:
http://queues.webkit.org/results/13804437
Chris Dumez
Comment 6
2012-09-10 00:39:22 PDT
Created
attachment 163056
[details]
Patch for landing Rebased on master. Could someone please cq+ ?
WebKit Review Bot
Comment 7
2012-09-10 01:16:10 PDT
Comment on
attachment 163056
[details]
Patch for landing Clearing flags on attachment: 163056 Committed
r128030
: <
http://trac.webkit.org/changeset/128030
>
WebKit Review Bot
Comment 8
2012-09-10 01:16:15 PDT
All reviewed patches have been landed. Closing bug.
Jessie Berlin
Comment 9
2013-04-18 10:53:14 PDT
***
Bug 57455
has been marked as a duplicate of this bug. ***
Jessie Berlin
Comment 10
2013-04-18 10:55:18 PDT
***
Bug 57450
has been marked as a duplicate of this bug. ***
Jessie Berlin
Comment 11
2013-04-18 10:56:52 PDT
***
Bug 95041
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug