[WK2] New fast/forms/number/number-interactive-validation-required.html fails https://bugs.webkit.org/show_bug.cgi?id=95936

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-10
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Add WKPreference private API for manipulate the interactive form
validation setting. This is now needed by WebKitTestRunner.

* Shared/WebPreferencesStore.h:
(WebKit):
* UIProcess/API/C/WKPreferences.cpp:
(WKPreferencesSetInteractiveFormValidationEnabled):
(WKPreferencesGetInteractiveFormValidationEnabled):
* UIProcess/API/C/WKPreferencesPrivate.h:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):

Tools:

Enable interactive form validation setting in WebKitTestRunner as
we are currently doing in DumpRenderTree. This is needed for some
tests to pass.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

LayoutTests:

Unskip fast/forms/number/number-interactive-validation-required.html for
several WebKit2 ports now that the interactive form validation setting is
enabled in WebKitTestRunner.

* platform/efl-wk2/TestExpectations:
* platform/qt-5.0-wk2/Skipped:

Canonical link: https://commits.webkit.org/114125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128030 268f45cc-cd09-0410-ab3c-d52691b4dbfc